RESOLVED FIXED224938
Fix ENABLE macro around NetworkProcessConnection::connectToRTCDataChannelRemoteSource declaration
https://bugs.webkit.org/show_bug.cgi?id=224938
Summary Fix ENABLE macro around NetworkProcessConnection::connectToRTCDataChannelRemo...
Alex Christensen
Reported 2021-04-22 10:28:26 PDT
Fix ENABLE macro around NetworkProcessConnection::connectToRTCDataChannelRemoteSource declaration
Attachments
Patch (1.50 KB, patch)
2021-04-22 10:28 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2021-04-22 10:28:49 PDT
EWS
Comment 2 2021-04-22 13:36:51 PDT
Committed r276459 (236919@main): <https://commits.webkit.org/236919@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426827 [details].
Ryan Haddad
Comment 3 2021-04-22 17:16:06 PDT
Note You need to log in before you can comment on or make changes to this bug.