Fix ENABLE macro around NetworkProcessConnection::connectToRTCDataChannelRemoteSource declaration https://bugs.webkit.org/show_bug.cgi?id=224938

Patch by Alex Christensen <achristensen@webkit.org> on 2021-04-22
Reviewed by Chris Dumez.

This matches the macro around the definition.

* WebProcess/Network/NetworkProcessConnection.h:

Canonical link: https://commits.webkit.org/236919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276459 268f45cc-cd09-0410-ab3c-d52691b4dbfc